syntax = "proto3";

package protos;
option go_package = "jacob.com/go-grpc;go_grpc";
//Important command, when updating proto file:
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/interface.proto

service ReplicaService {
    rpc sendSomeMessage(someMessage) returns (someMessage) {}
    rpc Increment(RequestIncrement) returns (ResponseIncrement) {}
}

message someMessage {
    string message = 1;
}

message RequestIncrement {
    int64 incrementAmount = 1;
}

message ResponseIncrement {
    int64 currentAmount = 1;
}